Resolve searchbar alignment in mobile mode Add bottom margin by 1rem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ body {
 
 main {
 	margin-top: 4rem;
+	margin-bottom: 1rem;
 }
 
 footer {
